--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,12 +1,14 @@
 {% extends "base.html" %}
-
-{% block title %}Login{% endblock %}
+{% load crispy_forms_tags %} {% block title %}Login{% endblock %}
 
 {% block content %}
-    <h2>Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2 class="mb-4">Login</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }} <button type="submit" class="btn btn-primary mt-3">Login</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
