--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,10 +1,14 @@
 {% extends "base.html" %}
-{% block title %}Registrar{% endblock %}
+{% load crispy_forms_tags %} {% block title %}Registrar{% endblock %}
+
 {% block content %}
-    <h2>Registrar</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-success">Registrar</button>
-    </form>
+    <div class="row">
+        <div class="col-md-6 offset-md-3">
+            <h2 class="mb-4">Registrar</h2>
+            <form method="post">
+                {% csrf_token %}
+                {{ form|crispy }} <button type="submit" class="btn btn-success mt-3">Registrar</button>
+            </form>
+        </div>
+    </div>
 {% endblock %}
