--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,35 @@
-{% load static %}
+{% load static navigation_tags %}
 <!doctype html>
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %} - {{ WAGTAIL_SITE_NAME }}</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
   </head>
-  <body class="bg-light"> 
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+  <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
         <a class="navbar-brand" href="/">{{ WAGTAIL_SITE_NAME }}</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Início</a>
-            </li>
-            {% if user.is_authenticated %}
+        <div class="collapse navbar-collapse" id="mainNavbar">
+          <ul class="navbar-nav me-auto">
+            <!-- O menu de tópicos será gerado aqui -->
+            {% get_topics as topics %}
+            {% for topic in topics %}
               <li class="nav-item">
-                <span class="nav-link">Olá, {{ user.username }}</span>
+                <a class="nav-link" href="{% pageurl topic %}">{{ topic.title }}</a>
               </li>
+            {% endfor %}
+          </ul>
+          <ul class="navbar-nav ms-auto">
+            {% if user.is_authenticated %}
+              <li class="nav-item"><span class="nav-link">Olá, {{ user.username }}</span></li>
               <li class="nav-item">
                 <form class="d-inline" method="post" action="{% url 'logout' %}">
                   {% csrf_token %}
@@ -33,17 +37,26 @@
                 </form>
               </li>
             {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'signup' %}">Registrar</a>
-              </li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Registrar</a></li>
             {% endif %}
           </ul>
         </div>
       </div>
     </nav>
+    
+    <!-- Sub-navegação estática, como na referência -->
+    <div class="bg-white border-bottom mb-4">
+        <div class="container">
+            <nav class="nav nav-pills nav-fill">
+                <a class="nav-link text-dark" href="#">Weekly edition</a>
+                <a class="nav-link text-dark" href="#">The world in brief</a>
+                <a class="nav-link text-dark" href="#">Business</a>
+                <a class="nav-link text-dark" href="#">Finance & economics</a>
+            </nav>
+        </div>
+    </div>
+
 
     <main class="container">
         {% block content %}{% endblock %}
