--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static navigation_tags %}
+{% load static navigation_tags wagtailcore_tags %}
 <!doctype html>
 <html lang="pt-br">
   <head>
