funcionou, adapar a parte de cima2 e baixo

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -40,3 +40,7 @@ Esta regra é específica e vai sobrescrever o Bootstrap.
 .navbar-dark .navbar-nav .nav-link.btn-link:hover {
     color: rgba(255, 255, 255, 0.75);
 }
+
+.mt-header-fixo {
+  margin-top: 65px;
+}
