--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,9 @@
 {% load static wagtailcore_tags navigation_tags %}
 
-<!-- HEADER FIXO DO USUÁRIO -->
-<header class="shadow-sm fixed-top bg-white border-bottom" style="z-index:1050;">
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container py-2">
+<!-- HEADER FIXO DO USUÁRIO (20% menor na vertical) -->
+<header class="shadow-sm fixed-top bg-white border-bottom" style="z-index:1050; min-height:39px;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="padding-top: 0.2rem; padding-bottom: 0.2rem;">
+        <div class="container py-0" style="min-height:39px;">
             <!-- Brand/Logo -->
             <a class="navbar-brand fw-bold fs-4 text-dark" href="/">{{ WAGTAIL_SITE_NAME }}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#userNavbar" 
@@ -32,22 +32,13 @@
     </nav>
 </header>
 
-<!-- BARRA DE TÓPICOS (ABAIXO DO HEADER FIXO) -->
-<div class="shadow-sm sticky-top bg-white border-bottom" style="top: 65px; z-index:1040;">
-    <div class="container">
-        <nav class="nav nav-pills nav-fill py-2">
-            {% get_topics as topics %}
-            {% for topic in topics %}
-                <a class="nav-link text-uppercase fw-medium" href="{% pageurl topic %}">{{ topic.title }}</a>
-            {% endfor %}
-        </nav>
-    </div>
-</div>
+<!-- Espaço para compensar o header fixo (20% menor) -->
+<div style="height: 52px;"></div>
 
-<!-- SUBNAVEGAÇÃO ESTÁTICA (Opcional, pode ficar embaixo dos tópicos) -->
-<div class="bg-light border-bottom mb-4 d-none d-lg-block">
+<!-- SUBNAVEGAÇÃO ESTÁTICA (agora deslocada para baixo do header) -->
+<div class="bg-light border-bottom mb-2 d-none d-lg-block">
     <div class="container">
-        <nav class="nav nav-pills nav-fill py-2">
+        <nav class="nav nav-pills nav-fill py-1">
             <a class="nav-link text-dark small" href="#">Weekly edition</a>
             <a class="nav-link text-dark small" href="#">The world in brief</a>
             <a class="nav-link text-dark small" href="#">Business</a>
