--- a/content/templates/content/article_page.html
+++ b/content/templates/content/article_page.html
@@ -109,6 +109,10 @@
                                         {{ block.value }}
                                     </div>
                                 </div>
+                            {% elif block.block_type == 'custom_video' %}
+                                <div class="content-block custom-video-block-wrapper">
+                                    {{ block }}
+                                </div>
                             {% elif block.block_type == 'quote' %}
                                 <div class="content-block quote-block">
                                     <blockquote class="blockquote-modern">
@@ -238,6 +242,10 @@
                                 <div class="ratio ratio-16x9">
                                     {{ block.value }}
                                 </div>
+                            </div>
+                        {% elif block.block_type == 'custom_video' %}
+                            <div class="content-block custom-video-block-wrapper">
+                                {{ block }}
                             </div>
                         {% elif block.block_type == 'quote' %}
                             <div class="content-block quote-block">
