Revert "Revamp short video previews and modal"

--- a/content/templates/content/videos_page.html
+++ b/content/templates/content/videos_page.html
@@ -18,10 +18,6 @@
 
     <!-- VIDEOS GRID -->
     {% if videos %}
-    <div class="videos-page-gallery">
-        {% for video in videos %}
-            <div class="videos-page-gallery-item">
-                {% include "content/partials/video_short_card.html" with video=video show_description=True %}
     <div class="videos-grid">
         <div class="row g-4">
             {% for video in videos %}
@@ -57,7 +53,8 @@
                     </div>
                 </div>
             </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
     </div>
     {% else %}
     <div class="alert alert-info">
@@ -72,7 +69,6 @@
         </a>
     </div>
 
-    {% include "content/partials/video_short_modal.html" %}
     <div class="modal fade" id="shortVideoModal" tabindex="-1" aria-labelledby="shortVideoModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
